--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -88,20 +88,84 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  font-family: var(--font-mont);
+}
+
+.mx-auto {
+  margin: auto;
 }
 
 .max-w-2xl {
-  max-width: var(--container-2xl); /* 42rem (672px) */
+  max-width: 42rem; /* 42rem (672px) */
 }
 .max-w-3xl {
-  max-width: var(--container-3xl); /* 48rem (768px) */
+  max-width: 48rem; /*  (768px) */
 }
 .max-w-4xl {
-  max-width: var(--container-4xl); /* 56rem (896px) */
+  max-width: 56rem; /* 56rem (896px) */
+}
+.max-w-5xl {
+  max-width: 64rem; /* 56rem (896px) */
+}
+
+.font-bold {
+  font-weight: 600;
+}
+
+.text-green {
+  color: #30df30;
+}
+.text-blue {
+  color: #467af8;
+}
+.text-purple {
+  color: #9c32e2;
+}
+.text-orange {
+  color: #ffa73d;
+}
+.text-red {
+  color: #ff2955;
+}
+.text-rainbow {
+  background: linear-gradient(122deg, #467af8, #9c32e2, #ff2955, #ffb15a);
+  -webkit-background-clip: text;
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+.text-white {
+  color: white;
+}
+
+.text-lg {
+  font-size: 1.125rem;
+}
+.text-7xl {
+  font-size: 4.5rem;
 }
 
 .min-h-screen {
   min-height: 100vh;
+}
+
+.border-green {
+  border-color: #30df30;
+}
+.border-blue {
+  border-color: #467af8;
+}
+.border-purple {
+  border-color: #9c32e2;
+}
+.border-orange {
+  border-color: #ffa73d;
+}
+.border-red {
+  border-color: #ff2955;
+}
+.border-rainbow {
+  background: linear-gradient(122deg, #467af8, #9c32e2, #ff2955, #ffb15a);
+  padding: 2px;
 }
 
 /* color: #323232; */
